<?xml version="1.0" encoding="utf-8"?>
<!--    Last Edit 27-04-22-->
<!--    10119182-->
<!--    Aditya Firmansyah-->
<!--    IF-5-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    >

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="150dp"
      android:layout_height="150dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.173"
      app:srcCompat="@drawable/ic_welcome_logo"
      android:contentDescription="@string/logo"/>

  <EditText
      android:id="@+id/editTextTextEmailAddress"
      android:layout_width="350dp"
      android:layout_height="55dp"
      android:ems="10"
      android:inputType="textEmailAddress"
      android:hint="@string/username"
      app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView2"
      android:autofillHints="11" />


  <EditText
      android:id="@+id/editTextTextPassword"
      android:layout_width="350dp"
      android:layout_height="50dp"
      android:ems="10"
      android:inputType="textPassword"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView2"
      app:layout_constraintVertical_bias="0.259"
      android:autofillHints="5" />



  <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/password"
      android:textColor="@color/white_font"
      android:textSize="20sp"
      app:layout_constraintBottom_toBottomOf="@+id/editTextTextPassword"
      app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
      app:layout_constraintHorizontal_bias="0.033"
      app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
      app:layout_constraintTop_toTopOf="@+id/editTextTextPassword"
      app:layout_constraintVertical_bias="0.0" />

  <Button
      android:id="@+id/button"
      android:layout_width="350dp"
      android:layout_height="50dp"
      android:layout_marginTop="24dp"
      android:background="@drawable/button_login"
      android:text="@string/login"
      android:textAllCaps="false"
      android:textColor="@color/white_font"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.491"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

  <Button
      android:id="@+id/button2"
      android:layout_width="350dp"
      android:layout_height="50dp"
      android:layout_marginTop="76dp"
      android:background="@drawable/button_login"
      android:text="@string/connect_with_facebook"
      android:textAllCaps="false"
      android:textColor="@color/white_font"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.508"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/button" />


  <TextView
      android:id="@+id/textView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:text="@string/or"
      android:textColor="@color/white_font"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/button" />

  <TextView
      android:id="@+id/textView6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/doesn_t_have_account"
      android:textColor="@color/white_font"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.41"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/button2"
      app:layout_constraintVertical_bias="0.4" />

  <TextView
      android:id="@+id/register"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="90dp"
      android:layout_marginEnd="100dp"
      android:layout_marginBottom="60dp"
      android:text="@string/register"
      android:textColor="@color/white"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@+id/button2"
      app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>